--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body, html{
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	display: flex;
+	align-content: flex-start;
+	justify-content: center;
+}
+
+.scoreBox{
+	display: flex;
+	justify-content: center;
 }
 
 
@@ -11,7 +19,6 @@ body, html{
     grid-template-rows: repeat(40, 1fr);
     width: 600px;
     height: 600px;
-    
     border: 2px groove #000;
     box-sizing: content-box;
     background: black;
