--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 body, html{
 	position: absolute;
 	width: 100%;
-	height: 100%;
+	height: 99%;
+	display: flex;
+	align-content: flex-start;
+	justify-content: center;
+}
+
+.scoreBox{
+	display: flex;
+	justify-content: center;
 }
 
 
@@ -30,9 +38,5 @@ body, html{
 	box-sizing: content-box;
     border: solid white 2px;
 
-}
+} 
 
-/*.gridRows{
-	
-	
-}
