--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body, html{
 	cursor: pointer;
 	position: absolute;
   	top: 35%;
-	left: 50%;
+	left: 53%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
   }
@@ -78,4 +78,7 @@ body, html{
   .button2:hover {
 	background-color: #008CBA;
 	color: white;
+  }
+  #papabear{
+	flex-direction: column;
   }
