--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body, html{
 	position: absolute;
 	width: 100%;
-	height: 99%;
+	height: 100%;
 	display: flex;
 	align-content: flex-start;
 	justify-content: center;
+	background-image: url("https://png.pngtree.com/thumb_back/fw800/back_pic/00/11/26/5356376b0b393f6.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	overflow: hidden;
 }
 
 .scoreBox{
-
+	font-family: 'Orbitron', sans-serif;
+	font-size: 65px;
 }
 
 .container{
@@ -52,8 +58,8 @@ body, html{
 	transition-duration: 0.4s;
 	cursor: pointer;
 	position: absolute;
-  	top: 35%;
-	left: 53%;
+  	top: 53%;
+	left: 50%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
   }
@@ -80,5 +86,9 @@ body, html{
 	color: white;
   }
   #papabear{
+	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
   }
