--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 body, html{
 	position: absolute;
 	width: 100%;
-	height: 99%;
+	height: 100%;
 	display: flex;
 	align-content: flex-start;
 	justify-content: center;
+    background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/00/11/26/5356376b0b393f6.jpg');
+    background-repeat: no-repeat;
+   background-position: center;
+   background-size: cover;
+   overflow: hidden;
 }
 
 .scoreBox{
-
+    font-family: 'Orbitron', sans-serif;
+    font-size: 65px;
+    
 }
 
 .container{
+
     display: grid;
     grid-template-columns: repeat(40, 1fr);
     grid-template-rows: repeat(40, 1fr);
@@ -52,8 +60,8 @@ body, html{
 	transition-duration: 0.4s;
 	cursor: pointer;
 	position: absolute;
-  	top: 35%;
-	left: 53%;
+  	top: 53%;
+  	left: 50%;
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
   }
@@ -80,5 +88,10 @@ body, html{
 	color: white;
   }
   #papabear{
+  	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+
   }
